--- a/first_test_file.ipynb
+++ b/first_test_file.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "037bde2f",
+   "id": "7a787317",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1462,7 +1462,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e9497b70",
+   "id": "6de12cc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "112a05c2",
+   "id": "fcf4c05c",
    "metadata": {},
    "outputs": [
     {
@@ -1573,7 +1573,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "9166aab4",
+   "id": "f2b080d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "63928b61",
+   "id": "8fa70311",
    "metadata": {},
    "outputs": [
     {
@@ -1833,7 +1833,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ca75ca66",
+   "id": "4e9ca142",
    "metadata": {},
    "outputs": [
     {
@@ -1854,7 +1854,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "23366440",
+   "id": "9e82f4fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "49aa730e",
+   "id": "c99fcc71",
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "6bc74e25",
+   "id": "aa903b45",
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "8d966ca3",
+   "id": "b220393e",
    "metadata": {},
    "outputs": [
     {
@@ -2216,7 +2216,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "45577190",
+   "id": "38b88dab",
    "metadata": {},
    "outputs": [
     {
@@ -2707,7 +2707,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "2a269a7a",
+   "id": "e60724d2",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c73866d0",
+   "id": "d58fba34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "2574362b",
+   "id": "c8fb16f7",
    "metadata": {},
    "outputs": [
     {
@@ -2791,7 +2791,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "726b62be",
+   "id": "a787e5d0",
    "metadata": {},
    "outputs": [
     {
@@ -2825,7 +2825,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "4e959ace",
+   "id": "4ee247f4",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "40028ece",
+   "id": "acae8d0d",
    "metadata": {},
    "outputs": [
     {
@@ -2878,7 +2878,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "9eb26637",
+   "id": "aea83a40",
    "metadata": {},
    "outputs": [
     {
@@ -2900,7 +2900,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "59c514f7",
+   "id": "802304af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2910,7 +2910,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0a4f1a37",
+   "id": "5f37b3ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2920,7 +2920,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9e394153",
+   "id": "0c9e8736",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2930,7 +2930,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e1c1cfa7",
+   "id": "c21001e2",
    "metadata": {},
    "outputs": [
     {
@@ -2951,7 +2951,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3a9578ae",
+   "id": "c5c6ca9c",
    "metadata": {},
    "outputs": [
     {
@@ -2973,7 +2973,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "88409d4b",
+   "id": "b4f5a77f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2984,7 +2984,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "91832838",
+   "id": "5a8fefa9",
    "metadata": {},
    "outputs": [
     {
@@ -3008,7 +3008,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "4ad0681f",
+   "id": "1c6afb63",
    "metadata": {},
    "outputs": [
     {
@@ -3076,7 +3076,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "d85050ac",
+   "id": "50d9dae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3087,7 +3087,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "001638f5",
+   "id": "c1530676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3097,7 +3097,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "9dd365cc",
+   "id": "fef19ee6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d95d419c",
+   "id": "65b79ee1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3117,7 +3117,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "cfff8c5e",
+   "id": "7973b746",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3127,7 +3127,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "523d8958",
+   "id": "3f6789c3",
    "metadata": {},
    "outputs": [
     {
@@ -3233,7 +3233,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "a84dbf17",
+   "id": "d269663a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3286,7 +3286,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4ab46735",
+   "id": "af85e8c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3296,7 +3296,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "972f4823",
+   "id": "cbe3227b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3306,7 +3306,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cdb2c3fb",
+   "id": "26e19d73",
    "metadata": {},
    "outputs": [
     {
@@ -3558,7 +3558,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "6f5dd8fd",
+   "id": "2d020c62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3568,7 +3568,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "bfa07532",
+   "id": "be89cf7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3578,7 +3578,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "79327b75",
+   "id": "a417e511",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3588,7 +3588,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "911a5a38",
+   "id": "350573de",
    "metadata": {},
    "outputs": [
     {
@@ -3649,7 +3649,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "c4807891",
+   "id": "7c299db3",
    "metadata": {},
    "outputs": [
     {
@@ -3717,7 +3717,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "51e29a53",
+   "id": "5a993bc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3727,7 +3727,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f4bc0619",
+   "id": "87b901e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3737,7 +3737,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "723859b5",
+   "id": "1a128ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3747,7 +3747,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "40c3cf72",
+   "id": "24c7f254",
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3802,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "8314b107",
+   "id": "af5088da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3812,7 +3812,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "37cf013c",
+   "id": "40cfcae7",
    "metadata": {},
    "outputs": [
     {
@@ -3838,7 +3838,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "3f5b4ed2",
+   "id": "16c5cdfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3848,7 +3848,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "07913997",
+   "id": "45555ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3862,7 +3862,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "63c4d571",
+   "id": "f6b30d14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3872,7 +3872,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9f9df7c7",
+   "id": "d48c321a",
    "metadata": {},
    "outputs": [
     {
@@ -3904,7 +3904,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "240b997e",
+   "id": "0cade0d6",
    "metadata": {},
    "outputs": [
     {
@@ -3925,7 +3925,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "f391b606",
+   "id": "1b1579cc",
    "metadata": {},
    "outputs": [
     {
@@ -3963,7 +3963,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "730c912e",
+   "id": "daffc640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3973,7 +3973,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6817faa1",
+   "id": "2a4f3246",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3983,7 +3983,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "c386cd31",
+   "id": "70a54454",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3993,7 +3993,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "c7512fd1",
+   "id": "e648b1e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4003,7 +4003,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "8a05b20c",
+   "id": "8bb4cab1",
    "metadata": {},
    "outputs": [
     {
@@ -4048,7 +4048,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6fc047a3",
+   "id": "6e54f339",
    "metadata": {},
    "outputs": [
     {
@@ -4074,7 +4074,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f53b1b25",
+   "id": "03c657c5",
    "metadata": {},
    "outputs": [
     {
@@ -4250,7 +4250,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "173ab73f",
+   "id": "58fbc857",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4260,7 +4260,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "544c6664",
+   "id": "7e3aa27a",
    "metadata": {},
    "outputs": [
     {
@@ -4283,7 +4283,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "04737557",
+   "id": "a3b867e9",
    "metadata": {},
    "outputs": [
     {
@@ -4315,7 +4315,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "64ec6f3c",
+   "id": "d8feea4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4325,7 +4325,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "1481d737",
+   "id": "708b028d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4337,7 +4337,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "f789fdab",
+   "id": "f9c853c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4347,7 +4347,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "c91ddc3a",
+   "id": "dabad8ab",
    "metadata": {},
    "outputs": [
     {
@@ -4383,7 +4383,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "908a9754",
+   "id": "e7d67530",
    "metadata": {},
    "outputs": [
     {
@@ -4415,7 +4415,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "60a16749",
+   "id": "b16b92d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4425,7 +4425,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "99f24eb6",
+   "id": "e79dffa0",
    "metadata": {},
    "outputs": [
     {
@@ -4468,7 +4468,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "30a356fa",
+   "id": "14e649f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4478,7 +4478,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "bd53a975",
+   "id": "d0e834aa",
    "metadata": {},
    "outputs": [
     {
@@ -4730,7 +4730,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "2b25031a",
+   "id": "0502bd2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4749,7 +4749,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "85564700",
+   "id": "620c0ee2",
    "metadata": {},
    "outputs": [
     {
@@ -4867,7 +4867,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "e0c163f9",
+   "id": "043b3162",
    "metadata": {},
    "outputs": [
     {
@@ -4998,7 +4998,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "d44c29e9",
+   "id": "c5927a01",
    "metadata": {},
    "outputs": [
     {
@@ -5072,7 +5072,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "ae100892",
+   "id": "c4f84c23",
    "metadata": {},
    "outputs": [
     {
@@ -5105,7 +5105,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "31df2767",
+   "id": "2fba02be",
    "metadata": {},
    "outputs": [
     {
@@ -5138,7 +5138,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "655b6a04",
+   "id": "1c7ed04a",
    "metadata": {},
    "outputs": [
     {
@@ -5171,7 +5171,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "2a5d7437",
+   "id": "b8575c55",
    "metadata": {},
    "outputs": [
     {
@@ -5204,7 +5204,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "7bfd0e8c",
+   "id": "06d91975",
    "metadata": {},
    "outputs": [
     {
@@ -5229,7 +5229,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "f6dc3f48",
+   "id": "29684e58",
    "metadata": {},
    "outputs": [
     {
@@ -5261,7 +5261,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "ff1cb4d9",
+   "id": "ecddd6e7",
    "metadata": {},
    "outputs": [
     {
@@ -5293,7 +5293,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "80be9f45",
+   "id": "7f9a963c",
    "metadata": {},
    "outputs": [
     {
@@ -5346,7 +5346,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a80b18ad",
+   "id": "bebe94a3",
    "metadata": {},
    "outputs": [
     {
@@ -5378,7 +5378,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "b52115ad",
+   "id": "4b74ce7b",
    "metadata": {},
    "outputs": [
     {
@@ -5417,7 +5417,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "53f69361",
+   "id": "730df3fa",
    "metadata": {},
    "outputs": [
     {
@@ -5548,7 +5548,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "34f1793d",
+   "id": "e20617a2",
    "metadata": {},
    "outputs": [
     {
@@ -5574,7 +5574,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "857de43a",
+   "id": "ab69b9a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5588,7 +5588,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "8fc5f3fb",
+   "id": "562376fa",
    "metadata": {},
    "outputs": [
     {
@@ -6067,7 +6067,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "e7c74ff5",
+   "id": "fb19dde9",
    "metadata": {},
    "outputs": [
     {
@@ -6090,7 +6090,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "2dc8efa8",
+   "id": "15db587f",
    "metadata": {},
    "outputs": [
     {
@@ -6112,7 +6112,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "58b9e4dd",
+   "id": "561a2858",
    "metadata": {},
    "outputs": [
     {
@@ -6146,7 +6146,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "0858db2c",
+   "id": "871dbe49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6171,7 +6171,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "82fd2291",
+   "id": "424374e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6181,7 +6181,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "fca9ada7",
+   "id": "c955703c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6192,7 +6192,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "af7a51d4",
+   "id": "df8619f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6204,11 +6204,21 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "1956ff7d",
+   "id": "9f13d1ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "8b03e00c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')"
    ]
   }
  ],
